--- a/style.css
+++ b/style.css
@@ -7,13 +7,10 @@
     max-width: 1200px;
     margin: auto;
 }
-nav{
-    padding: 10px;
-    background-color: beige;
-}
 ul{
     display: flex;
     list-style: none;
+    margin-right: 47px;
 }
 li a{
     text-decoration: none;
@@ -21,36 +18,37 @@ li a{
     color: white;
     border-radius: 8px;
 }
+li{
+    margin: 0 15px;
+}
 li a:hover{
-    background-color: rgb(76, 0, 255);
+    background-color: rgb(63, 62, 62);
 }
 .image{
-    margin: auto;
+
+    margin:5% auto;
     width: 50%;
  }
- *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 /* ............................ Registration form .............................. */
-.container{
-    max-width: 1200px;
-    margin: auto;
-}
-body{
-    background-color: rgb(209, 228, 235);
-}
+
 nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: #8a3ab9;
-    margin: 5px;
+    background-color: #999899;
+    margin-bottom: 5px;
+    padding: 5px;
 }
+
+.icon{
+    width: 50px;
+}
+
 .forgotten{
- margin-left: 40%;
- font-size: 18px;   
+    text-align: center;
+    font-size: 18px;  
+    margin: 10px; 
 }
 .btn{
     margin: 5px;
@@ -67,65 +65,64 @@ nav{
     background-color: #3306fd;
     color: #fff;
 }
+
 img{
     width: 100%;
 }
+
 .logo{
-    width: 120px;
-    display: flex;
-    color: #fff;
+margin-left: 50px; 
 }
-.Ishugram{
-    margin-top: 5px;
-    margin-left: 10px;
-    font-size: 20px;
-}
-h3{
+
+h2{
 text-align: center;
 margin: 10px;
 }
 
-#regi{
-    /* display: none; */
-    width: 55%;
-    margin: auto;
+.form{
+    width: 40%;
+    margin: 20px auto;
     background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
-    padding:30px 20px;
     border-radius: 10px;
+    padding: 3% 8%;
+    box-shadow: 2px 2px 10px 10px #e6e3e6;
 }
-#login{
-    width: 55%;
-    margin: auto;
-    background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
-    padding:30px 20px;
-    border-radius: 10px;
+::placeholder{
+    color: #ffffff;
 }
-label{
-    display: inline-block;
-    width: 200px;
-    
-}
-input{
+input,select{
+    width: 100%;
     margin: 5px;
-    padding: 3px 5px;
+    padding: 10px 10px;
     outline: none;
     border: none;
+    background-color: transparent;
+    color: #fff;
+    border-bottom: 2px solid #e6e3e6;
+    font-size: 17px;
+    font-size: bold;
 }
 .tream{
-    width: 300px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-select{
-    margin: 5px;
+input[type="checkbox"]{
+    width: 20px;
 }
+select {
+    color: rgb(22, 21, 21);
+  }
 input[type="submit"]{
     padding: 5px 30px;
     font-size: 16px;
-    margin: 10px 40%;
     cursor: pointer;
     background-color: transparent;
     border-radius: 8px;
     border: 2px solid #8a3ab9;
     color: #fff;
+    transition: 0.5s ease-in-out;
 }
 input[type="submit"]:hover{
     background: #8a3ab9;
